--- a/404.html
+++ b/404.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <script>
-      window.location.replace("/MaestriaFront/index.html");
+      window.location.replace("/posgradoITCh/index.html");
     </script>
   </head>
   <body>
     <p>
       Si no eres redirigido automáticamente, sigue
-      <a href="/MaestriaFront/index.html">este enlace</a>.
+      <a href="/posgradoITCh/index.html">este enlace</a>.
     </p>
   </body>
 </html>
